--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,7 @@ html{
 }
 
 .headerImg{
-    background-image: url(header_background.jpeg);
+    background-image: url(/images/header_background.jpeg);
     height: 600px;
     width: 100%;
     background-size: cover;
@@ -20,7 +20,8 @@ html{
     margin-left: auto;
     margin-right: auto;
     width: 400px;
-    height: 400px;
+    height: 500px;
+    border: solid black 2px;
 }
 
 .about{
@@ -55,16 +56,17 @@ p{
     color: black;
 }
   
-.projects {
+#projects {
     width: 800px;
     height: 800px;
     margin: 0 auto;
 }
   
-.projects > a > img {
+#projects > a > img {
     float: left;
     width: 45%;
     margin: 1.66%;
+    border: solid black 2px;
 }
 
 #projectHead{
