--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 html{
     background-color: #F0F0F0;
-    font-family: sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .headerImg{
@@ -13,6 +13,7 @@ html{
 #headerText{
     text-align: center;
     color: #F0F0F0;
+    margin-top: 225px;
 }
 
 .aboutImg{
@@ -21,7 +22,7 @@ html{
     margin-right: auto;
     width: 400px;
     height: 500px;
-    border: solid black 2px;
+    border: black solid 2px;
 }
 
 .about{
@@ -31,6 +32,31 @@ html{
 #aboutMe{
     color: black;
     text-align: center;
+}
+
+.hobby-images{
+    display: flex;
+}
+
+.column{
+    flex: 33.33%;
+    padding: 5px;
+}
+
+.mountTimp{
+    width: 400px;
+    height: 400px;
+    display: block;
+    border: black solid 2px;
+    margin-left: auto; 
+}
+
+.golfImg{
+    width: 400px;
+    height: 400px;
+    display: block;
+    border: black solid 2px;
+    margin-left: none;
 }
 
 p{
@@ -54,23 +80,25 @@ p{
 .navBar a:hover{
     background-color: #ddd;
     color: black;
+    transition: 0.2s;
 }
   
-#projects {
+.projects {
     width: 800px;
     height: 800px;
     margin: 0 auto;
 }
   
-#projects > a > img {
+.projects > a > img {
     float: left;
     width: 45%;
     margin: 1.66%;
-    border: solid black 2px;
+    border: black solid 2px;
 }
 
 #projectHead{
     text-align: center;
+    margin-top: 50px;
 }
 
 ion-icon{
@@ -149,3 +177,4 @@ footer{
     margin-right: auto;
     padding: 48px;
 }
+
