Project setup and inital commit

--- a/css/styles.css
+++ b/css/styles.css
@@ -193,6 +193,11 @@ ion-icon{
     transition: 0.2s;
 }
 
+.addCred{
+    text-align: center;
+    list-style: inside;
+}
+
 footer{
     display: table;
     text-align: center;
